[gd_scene load_steps=37 format=2]

[ext_resource path="res://actors/actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/player/player.gd" type="Script" id=2]
[ext_resource path="res://actors/player/player-weapon.png" type="Texture" id=3]

[sub_resource type="Animation" id=18]

resource_name = "attack_down"
length = 0.3
loop = false
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47 ]
}

[sub_resource type="Animation" id=22]

resource_name = "attack_down_left"
length = 0.3
loop = false
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47 ]
}

[sub_resource type="Animation" id=23]

resource_name = "attack_down_right"
length = 0.3
loop = false
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47 ]
}

[sub_resource type="Animation" id=19]

resource_name = "attack_left"
length = 0.3
loop = false
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=20]

resource_name = "attack_right"
length = 0.3
loop = false
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=21]

resource_name = "attack_up"
length = 0.3
loop = false
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51 ]
}

[sub_resource type="Animation" id=24]

resource_name = "attack_up_left"
length = 0.3
loop = false
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51 ]
}

[sub_resource type="Animation" id=25]

resource_name = "attack_up_right"
length = 0.3
loop = false
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51 ]
}

[sub_resource type="Animation" id=29]

resource_name = "dodge_down"
length = 0.45
loop = false
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54 ]
}

[sub_resource type="Animation" id=30]

resource_name = "dodge_down_left"
length = 0.45
loop = false
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54 ]
}

[sub_resource type="Animation" id=31]

resource_name = "dodge_down_right"
length = 0.45
loop = false
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 55, 56, 57 ]
}

[sub_resource type="Animation" id=27]

resource_name = "dodge_left"
length = 0.45
loop = false
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54 ]
}

[sub_resource type="Animation" id=28]

resource_name = "dodge_right"
length = 0.45
loop = false
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 55, 56, 57 ]
}

[sub_resource type="Animation" id=32]

resource_name = "dodge_up"
length = 0.45
loop = false
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 55, 56, 57 ]
}

[sub_resource type="Animation" id=33]

resource_name = "dodge_up_left"
length = 0.45
loop = false
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54 ]
}

[sub_resource type="Animation" id=34]

resource_name = "dodge_up_right"
length = 0.45
loop = false
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 55, 56, 57 ]
}

[sub_resource type="Animation" id=2]

length = 0.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=3]

resource_name = "idle_down_left"
length = 0.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=4]

resource_name = "idle_down_right"
length = 0.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 31 ]
}

[sub_resource type="Animation" id=5]

length = 0.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]

length = 0.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=7]

length = 0.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=8]

resource_name = "idle_up_left"
length = 0.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=9]

resource_name = "idle_up_right"
length = 0.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}

[sub_resource type="Animation" id=10]

length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 10 ]
}

[sub_resource type="Animation" id=11]

resource_name = "walk_down_left"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30 ]
}

[sub_resource type="Animation" id=12]

resource_name = "walk_down_right"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=13]

length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="Animation" id=14]

length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 6 ]
}

[sub_resource type="Animation" id=15]

length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 13, 14 ]
}

[sub_resource type="Animation" id=16]

resource_name = "walk_up_left"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20 ]
}

[sub_resource type="Animation" id=17]

resource_name = "walk_up_right"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25 ]
}

[sub_resource type="CapsuleShape2D" id=26]

custom_solver_bias = 0.0
radius = 10.0
height = 24.0

[node name="player" instance=ExtResource( 1 )]

collision_layer = 2
collision_mask = 13
script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "Pickable" ]

[node name="sprite" parent="." index="0"]

texture = ExtResource( 3 )
hframes = 58
frame = 57
_sections_unfolded = [ "Animation", "Region", "Transform" ]

[node name="anim" parent="." index="1"]

autoplay = "idle_down"
anims/attack_down = SubResource( 18 )
anims/attack_down_left = SubResource( 22 )
anims/attack_down_right = SubResource( 23 )
anims/attack_left = SubResource( 19 )
anims/attack_right = SubResource( 20 )
anims/attack_up = SubResource( 21 )
anims/attack_up_left = SubResource( 24 )
anims/attack_up_right = SubResource( 25 )
anims/dodge_down = SubResource( 29 )
anims/dodge_down_left = SubResource( 30 )
anims/dodge_down_right = SubResource( 31 )
anims/dodge_left = SubResource( 27 )
anims/dodge_right = SubResource( 28 )
anims/dodge_up = SubResource( 32 )
anims/dodge_up_left = SubResource( 33 )
anims/dodge_up_right = SubResource( 34 )
anims/idle_down = SubResource( 2 )
anims/idle_down_left = SubResource( 3 )
anims/idle_down_right = SubResource( 4 )
anims/idle_left = SubResource( 5 )
anims/idle_right = SubResource( 6 )
anims/idle_up = SubResource( 7 )
anims/idle_up_left = SubResource( 8 )
anims/idle_up_right = SubResource( 9 )
anims/walk_down = SubResource( 10 )
anims/walk_down_left = SubResource( 11 )
anims/walk_down_right = SubResource( 12 )
anims/walk_left = SubResource( 13 )
anims/walk_right = SubResource( 14 )
anims/walk_up = SubResource( 15 )
anims/walk_up_left = SubResource( 16 )
anims/walk_up_right = SubResource( 17 )

[node name="col_physics" parent="." index="2"]

visible = false
polygon = PoolVector2Array( -6, 32, -11, 16, 11, 16, 6, 32 )

[node name="hitbox" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 16
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="shape" type="CollisionShape2D" parent="hitbox" index="0"]

position = Vector2( 0, 4 )
shape = SubResource( 26 )

[node name="interact" parent="." index="4"]

visible = false
collision_layer = 2
collision_mask = 12
_sections_unfolded = [ "Collision" ]

[node name="attacks" type="Area2D" parent="." index="5"]

visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 16
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="down" type="CollisionPolygon2D" parent="attacks" index="0"]

build_mode = 0
polygon = PoolVector2Array( 4, 16, 33, 36, 17, 45, -6, 48, -31, 44, -46, 27, -44, 21, -12, 10 )
disabled = true

[node name="down_left" type="CollisionPolygon2D" parent="attacks" index="1"]

build_mode = 0
polygon = PoolVector2Array( 4, 16, 33, 36, 17, 45, -6, 48, -31, 44, -46, 27, -44, 21, -12, 10 )
disabled = true

[node name="down_right" type="CollisionPolygon2D" parent="attacks" index="2"]

build_mode = 0
polygon = PoolVector2Array( 4, 16, 33, 36, 17, 45, -6, 48, -31, 44, -46, 27, -44, 21, -12, 10 )
disabled = true

[node name="up" type="CollisionPolygon2D" parent="attacks" index="3"]

build_mode = 0
polygon = PoolVector2Array( 21, 6, 49, -21, 33, -47, -8, -48, -40, -33, -16, 0 )
disabled = true

[node name="up_left" type="CollisionPolygon2D" parent="attacks" index="4"]

build_mode = 0
polygon = PoolVector2Array( 21, 6, 49, -21, 33, -47, -8, -48, -40, -33, -16, 0 )
disabled = true

[node name="up_right" type="CollisionPolygon2D" parent="attacks" index="5"]

build_mode = 0
polygon = PoolVector2Array( 21, 6, 49, -21, 33, -47, -8, -48, -40, -33, -16, 0 )
disabled = true

[node name="left" type="CollisionPolygon2D" parent="attacks" index="6"]

build_mode = 0
polygon = PoolVector2Array( -11, -4, -24, -41, -48, -6, -48, 23, -31, 36, -5, 18 )
disabled = true

[node name="right" type="CollisionPolygon2D" parent="attacks" index="7"]

build_mode = 0
polygon = PoolVector2Array( 8, -12, 25, -44, 35, -40, 51, -23, 48, 5, 34, 29, -1, 18 )
disabled = true

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]

[connection signal="area_entered" from="interact" to="." method="_on_interact_area_entered"]

[connection signal="area_exited" from="interact" to="." method="_on_interact_area_exited"]

[connection signal="area_entered" from="attacks" to="." method="_on_attacks_area_entered"]


